Misc dark mode fixes (#944)
* Initial dark mode code from original branch.

* Remove obsolete resources

* fixed add order input fields being only 33px wide

* nvm actually fixed it!

* gave selected choice a indent

* fixed protube remote

* Fix modals.

* - fixed horizontal lines being hard to see.
- fixed list group headers being white.

* fixed protube search results uneven nth child being white

* made theming possible and reversed use_dark_mode migration.

* cleaned up some debugging stuff

* fixed some last bugs with the omnomcom and links in lightmode

* fixed gradient and event images not covering the card background

* fixed modal of omnomcom stretching to the bottom of the screen

* hopefully fixed merge conflict with master without merging with master first

--- a/resources/assets/sass/dark-theme.scss
+++ b/resources/assets/sass/dark-theme.scss
@@ -108,12 +108,12 @@ $photo_pop-text-shadow: 0 0 5px #fff;
 $photo-color: #fff;
 $photo-hover-color: #fff;
 $photo-text-shadow: 0 0 5px #fff;
-$photo-gradient: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0));
-$photo-hover-gradient: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0));
+$photo-gradient: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.6));
+$photo-hover-gradient: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.5));
 
 //calendar events
-$event-gradient: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0));
-$event-hover-gradient: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0));
+$event-gradient: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.6));
+$event-hover-gradient: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.5));
 $event-bg: $grey-dark;
 $event-hover-bg: $grey-medium;
 
